# libhal-util

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  MODIFICATIONS  README.md  conanfile.py
.github/workflows/: 4.0.0-alpha.1.yml  4.0.0-alpha.2.yml  4.0.0.yml  4.0.1.yml  4.0.2.yml  4.1.0.yml  5.0.0.yml  5.0.1.yml  5.0.2.yml  5.0.3.yml  api.yml  api_docs.yml  ci.yml  deploy.yml  take.yml
docs/: conf.py  doxygen.conf  index.rst  switcher.json
docs/_templates/: guide_links.html
docs/api/5.4.3/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/api/5.4.3/utilities/: as_bytes.html  bit.html  bit_limits.html  comparison.html  enum.html  index.html  map.html  math.html  static_list.html  (+5 more)
docs/utilities/: index.rst
docs/utilities/inert/: inert_accelerometer.md  inert_adc.md  inert_dac.md  inert_distance_sensor.md  inert_gyroscope.md  inert_input_pin.md  inert_interrupt_pin.md  inert_magnetometer.md  inert_motor.md  inert_output_pin.md  inert_pwm.md  inert_rotation_sensor.md  inert_steady_clock.md  inert_temperature_sensor.md  inert_timer.md
include/libhal-util/: as_bytes.hpp  atomic_spin_lock.hpp  bit.hpp  bit_bang_i2c.hpp  bit_bang_spi.hpp  bit_limits.hpp  buffered_can.hpp  can.hpp  comparison.hpp  enum.hpp  i2c.hpp  i2c_minimum_speed.hpp  input_pin.hpp  interrupt_pin.hpp  map.hpp  math.hpp  move_interceptor.hpp  output_pin.hpp  overflow_counter.hpp  serial.hpp  serial_coroutines.hpp  spi.hpp  static_callable.hpp  static_list.hpp  steady_clock.hpp  streams.hpp  timeout.hpp  to_array.hpp  units.hpp
include/libhal-util/inert_drivers/: inert_accelerometer.hpp  inert_adc.hpp  inert_dac.hpp  inert_distance_sensor.hpp  inert_gyroscope.hpp  inert_input_pin.hpp  inert_interrupt_pin.hpp  inert_magnetometer.hpp  inert_motor.hpp  inert_output_pin.hpp  inert_pwm.hpp  inert_rotation_sensor.hpp  inert_steady_clock.hpp  inert_temperature_sensor.hpp  inert_timer.hpp
include/libhal-util/mock/: adc.hpp  can.hpp  dac.hpp  input_pin.hpp  interrupt_pin.hpp  motor.hpp  output_pin.hpp  pwm.hpp  servo.hpp  spi.hpp  steady_clock.hpp  testing.hpp  timer.hpp
include/libhal-util/usb/: descriptors.hpp  endpoints.hpp  enumerator.hpp  utils.hpp
sphinx/: conf.py
src/: atomic_spin_lock.cpp  bit_bang_i2c.cpp  bit_bang_spi.cpp  inverter.cpp  steady_clock.cpp  streams.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: as_bytes.test.cpp  atomic_spin_lock.test.cpp  bit.functions.test.cpp  bit.test.cpp  bit_bang_i2c.test.cpp  bit_bang_spi.test.cpp  can.test.cpp  enum.test.cpp  i2c.test.cpp  input_pin.test.cpp  interrupt_pin.test.cpp  main.test.cpp  map.test.cpp  math.test.cpp  move_interceptor.test.cpp  output_pin.test.cpp  overflow_counter.test.cpp  serial.test.cpp  serial_coroutines.test.cpp  spi.test.cpp  static_callable.test.cpp  static_list.test.cpp  steady_clock.test.cpp  streams.test.cpp  timeout.test.cpp  units.test.cpp
tests/inert_drivers/: inert_accelerometer.test.cpp  inert_adc.test.cpp  inert_dac.test.cpp  inert_distance_sensor.test.cpp  inert_gyroscope.test.cpp  inert_input_pin.test.cpp  inert_interrupt_pin.test.cpp  inert_magnetometer.test.cpp  inert_motor.test.cpp  inert_output_pin.test.cpp  inert_pwm.test.cpp  inert_rotation_sensor.test.cpp  inert_steady_clock.test.cpp  inert_temperature_sensor.test.cpp  inert_timer.test.cpp
v5/: CMakeLists.txt  conanfile.py
v5/include/libhal-util/: as_bytes.hpp  atomic_spin_lock.hpp  bit.hpp  bit_bang_i2c.hpp  bit_limits.hpp  buffered_can.hpp  can.hpp  comparison.hpp  enum.hpp  i2c.hpp  input_pin.hpp  macros.hpp  math.hpp  move_interceptor.hpp  output_pin.hpp  scatter_span.hpp  serial.hpp  serial_coroutines.hpp  spi.hpp  static_list.hpp  steady_clock.hpp  streams.hpp  timeout.hpp  to_array.hpp  units.hpp  usb.hpp
v5/src/: atomic_spin_lock.cpp  bit_bang_i2c.cpp
v5/test_package/: CMakeLists.txt  conanfile.py  main.cpp
v5/tests/: can.test.cpp  i2c.test.cpp  main.test.cpp  math.test.cpp  serial.test.cpp  static_callable.test.cpp  static_list.test.cpp  usb.test.cpp  usb2.test.cpp
v5/tests/inert_drivers/: inert_dac.test.cpp  inert_gyroscope.test.cpp  inert_input_pin.test.cpp  inert_magnetometer.test.cpp  inert_motor.test.cpp  inert_output_pin.test.cpp  inert_pwm.test.cpp  inert_rotation_sensor.test.cpp  inert_temperature_sensor.test.cpp  inert_timer.test.cpp
v6/: CMakeLists.txt  conanfile.py
v6/modules/: as_bytes.cppm  atomic_spin_lock.cppm  bit.cppm  can.cppm  comparison.cppm  enum.cppm  hal.util.cppm  i2c.cppm  map.cppm  math.cppm  overflow_counter.cppm  overflow_counter.hpp  serial.cppm  spi.cppm  static_callable.hpp  steady_clock.cppm  to_array.cppm  units.cppm
v6/modules/inert_drivers/: inert_accelerometer.hpp  inert_dac.hpp  inert_timer.hpp
v6/modules/mock/: can.hpp  motor.hpp  spi.hpp  timer.hpp
v6/src/: README.md  inverter.cpp  steady_clock.cpp  streams.cpp
v6/test_package/: CMakeLists.txt  conanfile.py  main.cpp
v6/tests/: as_bytes.test.cpp  atomic_spin_lock.test.cpp  bit.functions.test.cpp  bit.test.cpp  bit_bang_i2c.test.cpp  bit_functions.test.cpp  can.test.cpp  enum.test.cpp  i2c.test.cpp  interrupt_pin.test.cpp  main.test.cpp  map.test.cpp  math.test.cpp  move_interceptor.test.cpp  overflow_counter.test.cpp  serial.test.cpp  serial_coroutines.test.cpp  spi.test.cpp  steady_clock.test.cpp  to_array.test.cpp  units.test.cpp  usb.test.cpp  util.cppm
v6/tests/inert_drivers/: inert_adc.test.cpp  inert_interrupt_pin.test.cpp  inert_steady_clock.test.cpp
(+24 files in other folders)
